file: fix date string day difference calculation

nautilus_file_get_date_as_string() uses today's date and the GDateTime
constructed from the return value of nautilus_file_get_date(), which
also includes the time of day, thus making the calculation of the
day difference incorrect. To illustrate, files, modified two days ago
can appear to have been modified yesterday.

This commit fixes that by calculating the day difference of the dates
with the time value of 00:00:00.

https://bugzilla.gnome.org/show_bug.cgi?id=756402